--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-community/geolocation": "^3.0.6",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-file-logger": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
