--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-community/geolocation": "^3.0.6",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-file-logger": "^0.4.1"
+    "react-native-file-logger": "^0.4.1",
+    "react-native-fs": "^2.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
