--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-file-logger": "^0.4.1",
-    "react-native-fs": "^2.20.0"
+    "react-native-fs": "^2.20.0",
+    "react-native-logs": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
