--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.0.6",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-background-fetch": "^4.1.0",
     "react-native-background-geolocation": "^4.12.1",
     "react-native-file-logger": "^0.4.1",
     "react-native-fs": "^2.20.0",
-    "react-native-logs": "^5.0.1"
+    "react-native-logs": "^5.0.1",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
