--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@react-native-community/geolocation": "^3.0.6",
+    "@react-navigation/devtools": "^6.0.18",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@ui-kitten/components": "^5.3.1",
@@ -22,10 +24,13 @@
     "react-native": "0.71.8",
     "react-native-background-fetch": "^4.1.0",
     "react-native-background-geolocation": "^4.12.1",
+    "react-native-drawer-layout": "^3.2.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-file-logger": "^0.4.1",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.11.0",
     "react-native-logs": "^5.0.1",
+    "react-native-reanimated": "3.1.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0"
