feat: auth request

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
+    "dayjs": "^1.11.8",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-background-fetch": "^4.1.0",
     "react-native-background-geolocation": "^4.12.1",
+    "react-native-device-info": "^10.6.0",
     "react-native-drawer-layout": "^3.2.0",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-file-logger": "^0.4.1",
