--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.4.0",
     "base-64": "^1.0.0",
-    "dayjs": "^1.11.8",
+    "dayjs": "^1.11.9",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-background-fetch": "^4.1.0",
