--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.71.8",
     "react-native-background-fetch": "^4.1.0",
     "react-native-background-geolocation": "^4.12.1",
+    "react-native-chatty": "^0.4.3",
     "react-native-device-info": "^10.6.0",
     "react-native-drawer-layout": "^3.2.0",
     "react-native-encrypted-storage": "^4.0.3",
