--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.11.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-logs": "^5.0.1",
     "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "3.1.0",
