--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-background-fetch": "^4.1.0",
     "react-native-background-geolocation": "^4.12.1",
     "react-native-chatty": "^0.4.3",
+    "react-native-communications": "^2.2.1",
     "react-native-context-menu-view": "^1.11.0",
     "react-native-device-info": "^10.6.0",
     "react-native-drawer-layout": "^3.2.0",
