--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moti": "^0.26.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-android-intent-launcher": "^0.3.0",
     "react-native-background-fetch": "^4.1.0",
     "react-native-background-geolocation": "^4.12.1",
     "react-native-chatty": "^0.4.3",
