--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^11.26.1",
+    "rn-update-apk": "^5.0.0",
     "swr": "^2.2.0"
   },
   "devDependencies": {
