--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,3 +7,6 @@ project(':react-native-background-geolocation').projectDir = new File(rootProjec
 
 include ':react-native-background-fetch'
 project(':react-native-background-fetch').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-fetch/android')
+
+include ':rn-fetch-blob'
+project(':rn-fetch-blob').projectDir = new File(rootProject.projectDir, '../node_modules/rn-fetch-blob/android')
