--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/rn-fetch-blob": "^1.2.7",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.4.0",
@@ -55,6 +56,7 @@
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-webview": "^11.26.1",
+    "rn-fetch-blob": "^0.12.0",
     "rn-update-apk": "^5.0.0",
     "swr": "^2.2.0"
   },
