--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-logs": "^5.0.1",
+    "react-native-maps": "^1.18.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "3.1.0",
