--- a/src/styles/mapping.json
+++ b/src/styles/mapping.json
@@ -66,7 +66,8 @@
               },
               "success": {
                 "borderColor": "#00990D",
-                "textColor": "#00990D"
+                "textColor": "#00990D",
+                "iconTintColor": "#00990D"
               }
             }
           }
@@ -81,7 +82,8 @@
               "basic": {
                 "state": {
                   "focused": {
-                    "borderColor": "#3E3346"
+                    "borderColor": "#3E3346",
+                    "iconTintColor": "#3E3346"
                   }
                 }
               }
@@ -108,6 +110,8 @@
             "borderRadius": 0,
             "bodyPaddingHorizontal": 0,
             "bodyPaddingVertical": 0,
+            "headerPaddingHorizontal": 0,
+            "headerPaddingVertical": 0,
             "borderColor": "#DEE4DE"
           },
           "variantGroups": {
