--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
     <!-- Установка пакетов из внешних источников -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
+    
+
     <application
         android:usesCleartextTraffic="true"
         android:name=".MainApplication"
@@ -49,6 +51,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
             </intent-filter>
         </activity>
     </application>
