--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.gtdrivenext" xmlns:tools="http://schemas.android.com/tools">
     <!-- Интернет доступ -->
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- Доступ к камере -->
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <!-- Доступ к геолокации -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -28,9 +31,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!-- Установка пакетов из внешних источников -->
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-
-    
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:usesCleartextTraffic="true"
@@ -51,7 +52,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-                <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
         </activity>
     </application>
