--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.gtdrivenext" xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.gtdrivenext"
+    xmlns:tools="http://schemas.android.com/tools">
+    <!-- Установка пакетов из внешних источников -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
     <!-- Интернет доступ -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -29,9 +33,6 @@
     <!-- Доступ к хранилищу для старых версий Android (до Android 10) -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <!-- Установка пакетов из внешних источников -->
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:usesCleartextTraffic="true"
