Переделан алгоритм работы приложения, теперь, когда полученные маршруты имеют firstInQueue = true они начинаются автоматически, без необходимости заходить на страницу RouteSceen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "java.configuration.updateBuildConfiguration": "interactive",
   "CodeGPT.query.language": "Russian",
-  "CodeGPT.apiKey": "LM Studio"
+  "CodeGPT.apiKey": "CodeGPT Plus Beta"
 }
