--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-file-logger": "^0.4.1",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.11.0",
+    "react-native-gesture-handler": "2.11.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-viewing": "^0.2.2",
